feat: adicao e carregamento de topicos